added conan to the party

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,21 @@
 # minimum require version
 cmake_minimum_required(VERSION 3.17 FATAL_ERROR)
+
 # project name
 project(network-monitor)
+
+# Dependencies
+# loaded dependecies from conan
+if(EXISTS ${CMAKE_CURRENT_BINARY_DIR}/conaoninfo.txt)
+    list(PREPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_BINARY_DIR}")
+endif()
+
 # set the source folder from where to pull the source code
 set(SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp")
+
 # where to store the executable
 add_executable(network-monitor ${SOURCES})
+
 # target cmake - same folder, version of c++ to use
 target_compile_features(network-monitor
     PRIVATE
